--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,49 +1,56 @@
 <%- include('header') %>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+<style>
+  body{
+    font-family: poppins;
+  }
+</style>
   <form id="loginform" action="/authenticate/login" method="post">
-
     <div class="LoginPage d-flex justify-content-evenly" data-ride="carousel"
-      style="background-position: center ;   background-image: url('/Images/1694680589320-image (2).jpg'  );  
-      ">
+      style="background-position:center  ;background-size:cover;   background-image: url('/Images/New/image (14).jpg'  );">
       <div class=" container-fluid" style="background-color: rgba(62, 62, 62, 0.668);">
-        
-
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="login col-3">
-        <div class="AlignCenter  ">
-
-          <h1 class=" "> Welcome </h1>
-
-          <label class="Login_Test" for="login_DIv1_Username">Usename</label>
-          <input class="col-12  btn " onchange="CheckUser()" style="border-radius: 10px;" id="login_DIv1_Username"
-            title="Username is case sencitive" type="Login_Test" name="Username" placeholder="Usename">
-          <select id="idCompanyList" style="text-transform:uppercase" class="form-control mt-3">
-
-
-          </select>
-
-
-
-          <label class="Login_Test" for="login_DIv1_Password">Password</label>
-          <input class="Login_Test form-control btn" id="login_DIv1_Password" type="password"
-            title="Password is case sencitive" name="Password" placeholder="password">
-            <div class="container-fluid">
-              <button class="btn btn-success col-3" type="submit" value="">  SIGN IN </button>
-              <a style="text-decoration: none "class="btn col-3 form-control btn-primary AlignCenter bi bi-person-plus-fill" href="/authenticate/signup">SIGN UP</a>
-              
+          <div class="container-fluid col-12 d-flex" style="height: 500px;">
+            <div class="container-fluid col-3">
+              1
             </div>
-
-           
-
-
-        </div>
-      </div>
+            <div class="container-fluid col-3">
+              2
+            </div>
+            <div class="container-fluid col-3">
+              3
+            </div>
+            <div class="container-fluid col-3 border border-light    rounded   m-4   p-3 " style="  background-color: rgba(86,81,59,.5);">
+               <div class="container-fluid mt-2   ">
+                <div class="container-fluid d-flex align-items-center col-12 " style="height: 50px;  ;">
+                  
+                </div> 
+                 <div class="container-fluid  align-items-center col-12 " style="height: 80px;  ;">
+                  <small   class="text-light"> Welcome to </small>   <br>
+                  <small style="font-size: 30px;" class="text-warning"> Book my trip</small> <br>
+                      
+                 </div>
+                 
+                  <div class="input-group  border border-secondary p-2 rounded   ">
+                    <span class="input-group-text text-primary bg-light btn btn-secondary bi bi-person-bounding-box " id="basic-addon1"> </span>
+                    <input type="text" class="form-control" placeholder="email" aria-label="Username" aria-describedby="basic-addon1">
+                  </div>
+                 
+                  <div class="input-group  border border-secondary p-2 rounded ">
+                    <span class="input-group-text text-primary btn btn-secondary bi bi-shield-lock " id="basic-addon1"> </span>
+                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                  </div>
+                  <div class=" container-fluid d-flex p-2 rounded justify-content-center ">
+                    <div class="btn">
+                      <button class="input-group-text btn btn-secondary rounded    "   id="basic-addon1"> SIGN-IN</button>
+                    <small> <a class="text-warning" href=""> FORGOT? </a></small>
+                    </div>
+                  </div>
+                  
+                  
+               </div>
+            </div>
+          </div>
       </div>
     </div>
   </form>
